# stilingue-social-listening-etl

./: .env.example  .gitignore  .mailmap  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  build.bat  build_exe.sh  energisa_etl.spec  install.sh  pyproject.toml  requirements.txt  run.bat  run.sh  run_dashboard.sh  stilingue_etl.spec  whisper_pulse.spec
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: ci.yml
dashboard/: app.py  componentes.py  dados.py  metricas.py  style.css  tema.py
dashboard/paginas/: midia.py  overview.py  publicacoes.py  sentimento.py
relatorios/: 01_overview.html  02_midia.html  03_sentimento.html  04_publicacoes.html
scripts/: gerar_dados_amostra.py  gerar_relatorio_html.py  setup_task_scheduler.ps1
src/: __main__.py  config.py  pipeline.py  schemas.py
src/api/: client.py  endpoints.py
src/extractors/: __init__.py  linechart.py  publicacoes.py  ranking_evolutivo.py  sentimento_grupos.py  sentimento_temas.py  visao_geral.py
src/loaders/: __init__.py  consolidador.py  csv_writer.py
src/transformers/: transformers.py
tests/: test_client.py  test_transformers.py
tests/fixtures/mock_responses/: linechart.json  publicacoes.json  ranking_evolutivo.json  sentimento_grupos.json  sentimento_temas.json  visao_geral.json
