[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "whisper-pulse"
version = "2.0.0"
description = "Pipeline ETL + Dashboard interativo para Social Listening via API de social listening"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
dependencies = [
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "pandas==2.1.4",
    "pyarrow>=14.0.0",
    "loguru==0.7.2",
    "tenacity==8.2.3",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pyinstaller==6.3.0",
]

[project.scripts]
social-listening-etl = "src.pipeline:executar_pipeline"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "dashboard*"]
