[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "stilingue-energisa-etl"
version = "1.1.0"
description = "ETL corporativo para dados de energia elétrica - integração Stilingue"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.9"
dependencies = [
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "pandas==2.1.4",
    "pyarrow>=14.0.0",
    "loguru==0.7.2",
    "tenacity==8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pyinstaller==6.3.0",
]

[project.scripts]
energisa-etl = "src.pipeline:executar_pipeline"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
